# pr-ci-dashboard

./: .dockerignore  .gitignore  Containerfile  HOWTO.md  MANIFEST.in  README.md  index.html?search=.*is isolated from the default network with.*UDN.*&maxAge=336h&context=1&type=junit&name=.*nightly.*4.22.*rhcos10.*&excludeName=&maxMatches=5&maxBytes=20971520&groupBy=job  pyproject.toml  requirements.txt  run.sh  server.py
.claude-plugin/: plugin.json
.github/workflows/: ci.yaml
api/: analysis.py  search.py
commands/: detect-permafail.md
docs/: 2026-07-08-session-handoff.md  design.md  multi-user-deployment.md
docs/plans/: 2026-02-11-pr-ci-dashboard-implementation.md
docs/specs/: 2026-07-02-security-hardening-plan.md
k8s/: deployment.yaml  pvc.yaml  service.yaml
pr_ci_dashboard/: __init__.py  server.py
pr_ci_dashboard/api/: analysis.py  jobs.py  retest.py  search.py
pr_ci_dashboard/scripts/: payload-retest.sh
pr_ci_dashboard/static/: app.js  styles.css
scripts/: common.sh  e2e-retest.sh  payload-retest.sh
static/: app.js  styles.css
templates/: index.html
tests/: conftest.py  test_ai_analyzer.py  test_api_analysis.py  test_audit_rate_limit.py  test_auto_retest.py  test_cli.py  test_cli_integration.py  test_csrf.py  test_db.py  test_github_app.py  test_github_oauth.py  test_github_required.py  test_google_oauth.py  test_healthz.py  test_integration.py  test_jobs_error_passthrough.py  test_login_gate.py  test_retest_attribution.py  test_script_fetcher.py  test_validation.py
utils/: ai_analyzer.py  db.py  job_executor.py  script_fetcher.py
(+21 files in other folders)
